langtools/test/tools/javac/unicode/NonasciiDigit.out
NonasciiDigit.java:12:26: compiler.err.illegal.char: \uff11
1 error
